--- a/gb/24/10/3/n14343327.md
+++ b/gb/24/10/3/n14343327.md
@@ -52,16 +52,16 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342794.md#1">台风来袭 北北基桃被疑未达标也放假</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/22/n10079307.md#1" target="_blank">林辉：周恩来主任秘书自杀 亲戚文革遭殃</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343046.md#1">【古道人生】丈夫遭仇人陷害 妻子挺身来相救</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346736.md#1">【新闻欣视角】中共“贪官经济”关键整民企</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343384.md#1">【环球直击】中国股市低失去动力 港股大跌</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
@@ -69,7 +69,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345538.md#1">59广播金钟周末登场 唐绮阳、五坚情将出席颁奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
