--- a/gb/24/10/3/n14343327.md
+++ b/gb/24/10/3/n14343327.md
@@ -52,7 +52,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342794.md#1">台风来袭 北北基桃被疑未达标也放假</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/23/n9986897.md#1" target="_blank">莫斯科“悲伤墙”背后的故事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
